@@ -17,15 +17,21 @@
 package org.apache.kafka.coordinator.group;
 
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.compress.Compression;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.errors.NotCoordinatorException;
+import org.apache.kafka.common.internals.Plugin;
 import org.apache.kafka.common.internals.Topic;
 import org.apache.kafka.common.message.ConsumerGroupDescribeResponseData;
 import org.apache.kafka.common.message.ConsumerGroupHeartbeatRequestData;
 import org.apache.kafka.common.message.ConsumerGroupHeartbeatResponseData;
 import org.apache.kafka.common.message.DeleteGroupsResponseData;
+import org.apache.kafka.common.message.DeleteShareGroupOffsetsRequestData;
+import org.apache.kafka.common.message.DeleteShareGroupOffsetsResponseData;
 import org.apache.kafka.common.message.DescribeGroupsResponseData;
+import org.apache.kafka.common.message.DescribeShareGroupOffsetsRequestData;
+import org.apache.kafka.common.message.DescribeShareGroupOffsetsResponseData;
 import org.apache.kafka.common.message.HeartbeatRequestData;
 import org.apache.kafka.common.message.HeartbeatResponseData;
 import org.apache.kafka.common.message.JoinGroupRequestData;
@@ -40,10 +46,14 @@ import org.apache.kafka.common.message.OffsetDeleteRequestData;
 import org.apache.kafka.common.message.OffsetDeleteResponseData;
 import org.apache.kafka.common.message.OffsetFetchRequestData;
 import org.apache.kafka.common.message.OffsetFetchResponseData;
+import org.apache.kafka.common.message.ReadShareGroupStateSummaryRequestData;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData.DescribedGroup;
 import org.apache.kafka.common.message.ShareGroupHeartbeatRequestData;
 import org.apache.kafka.common.message.ShareGroupHeartbeatResponseData;
+import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
+import org.apache.kafka.common.message.StreamsGroupHeartbeatRequestData;
+import org.apache.kafka.common.message.StreamsGroupHeartbeatResponseData;
 import org.apache.kafka.common.message.SyncGroupRequestData;
 import org.apache.kafka.common.message.SyncGroupResponseData;
 import org.apache.kafka.common.message.TxnOffsetCommitRequestData;
@@ -52,10 +62,13 @@ import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.requests.ApiError;
 import org.apache.kafka.common.requests.ConsumerGroupDescribeRequest;
 import org.apache.kafka.common.requests.DeleteGroupsRequest;
+import org.apache.kafka.common.requests.DeleteShareGroupOffsetsRequest;
 import org.apache.kafka.common.requests.DescribeGroupsRequest;
+import org.apache.kafka.common.requests.DescribeShareGroupOffsetsRequest;
 import org.apache.kafka.common.requests.OffsetCommitRequest;
 import org.apache.kafka.common.requests.RequestContext;
 import org.apache.kafka.common.requests.ShareGroupDescribeRequest;
+import org.apache.kafka.common.requests.StreamsGroupDescribeRequest;
 import org.apache.kafka.common.requests.TransactionResult;
 import org.apache.kafka.common.requests.TxnOffsetCommitRequest;
 import org.apache.kafka.common.utils.BufferSupplier;
@@ -72,11 +85,25 @@ import org.apache.kafka.coordinator.common.runtime.CoordinatorShardBuilderSuppli
 import org.apache.kafka.coordinator.common.runtime.MultiThreadedEventProcessor;
 import org.apache.kafka.coordinator.common.runtime.PartitionWriter;
 import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetrics;
+import org.apache.kafka.coordinator.group.streams.StreamsGroupHeartbeatResult;
 import org.apache.kafka.image.MetadataDelta;
 import org.apache.kafka.image.MetadataImage;
+import org.apache.kafka.server.authorizer.Authorizer;
 import org.apache.kafka.server.record.BrokerCompressionType;
+import org.apache.kafka.server.share.persister.DeleteShareGroupStateParameters;
+import org.apache.kafka.server.share.persister.DeleteShareGroupStateResult;
+import org.apache.kafka.server.share.persister.GroupTopicPartitionData;
+import org.apache.kafka.server.share.persister.InitializeShareGroupStateParameters;
+import org.apache.kafka.server.share.persister.InitializeShareGroupStateResult;
+import org.apache.kafka.server.share.persister.PartitionErrorData;
+import org.apache.kafka.server.share.persister.PartitionFactory;
+import org.apache.kafka.server.share.persister.PartitionStateData;
+import org.apache.kafka.server.share.persister.Persister;
+import org.apache.kafka.server.share.persister.ReadShareGroupStateSummaryParameters;
+import org.apache.kafka.server.share.persister.TopicData;
 import org.apache.kafka.server.util.FutureUtils;
 import org.apache.kafka.server.util.timer.Timer;
+import org.apache.kafka.server.util.timer.TimerTask;
 
 import org.slf4j.Logger;
 
@@ -84,11 +111,13 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
@@ -102,6 +131,7 @@ import static org.apache.kafka.coordinator.common.runtime.CoordinatorOperationEx
 /**
  * The group coordinator service.
  */
+@SuppressWarnings({"ClassDataAbstractionCoupling"})
 public class GroupCoordinatorService implements GroupCoordinator {
 
     public static class Builder {
@@ -114,6 +144,8 @@ public class GroupCoordinatorService implements GroupCoordinator {
         private CoordinatorRuntimeMetrics coordinatorRuntimeMetrics;
         private GroupCoordinatorMetrics groupCoordinatorMetrics;
         private GroupConfigManager groupConfigManager;
+        private Persister persister;
+        private Optional<Plugin<Authorizer>> authorizerPlugin;
 
         public Builder(
             int nodeId,
@@ -158,29 +190,34 @@ public class GroupCoordinatorService implements GroupCoordinator {
             return this;
         }
 
+        public Builder withPersister(Persister persister) {
+            this.persister = persister;
+            return this;
+        }
+
+        public Builder withAuthorizerPlugin(Optional<Plugin<Authorizer>> authorizerPlugin) {
+            this.authorizerPlugin = authorizerPlugin;
+            return this;
+        }
+
         public GroupCoordinatorService build() {
-            if (config == null)
-                throw new IllegalArgumentException("Config must be set.");
-            if (writer == null)
-                throw new IllegalArgumentException("Writer must be set.");
-            if (loader == null)
-                throw new IllegalArgumentException("Loader must be set.");
-            if (time == null)
-                throw new IllegalArgumentException("Time must be set.");
-            if (timer == null)
-                throw new IllegalArgumentException("Timer must be set.");
-            if (coordinatorRuntimeMetrics == null)
-                throw new IllegalArgumentException("CoordinatorRuntimeMetrics must be set.");
-            if (groupCoordinatorMetrics == null)
-                throw new IllegalArgumentException("GroupCoordinatorMetrics must be set.");
-            if (groupConfigManager == null)
-                throw new IllegalArgumentException("GroupConfigManager must be set.");
+            requireNonNull(config, new IllegalArgumentException("Config must be set."));
+            requireNonNull(writer, new IllegalArgumentException("Writer must be set."));
+            requireNonNull(loader, new IllegalArgumentException("Loader must be set."));
+            requireNonNull(time, new IllegalArgumentException("Time must be set."));
+            requireNonNull(timer, new IllegalArgumentException("Timer must be set."));
+            requireNonNull(coordinatorRuntimeMetrics, new IllegalArgumentException("CoordinatorRuntimeMetrics must be set."));
+            requireNonNull(groupCoordinatorMetrics, new IllegalArgumentException("GroupCoordinatorMetrics must be set."));
+            requireNonNull(groupConfigManager, new IllegalArgumentException("GroupConfigManager must be set."));
+            requireNonNull(persister, new IllegalArgumentException("Persister must be set."));
+            requireNonNull(authorizerPlugin, new IllegalArgumentException("Authorizer must be set."));
 
             String logPrefix = String.format("GroupCoordinator id=%d", nodeId);
             LogContext logContext = new LogContext(String.format("[%s] ", logPrefix));
 
             CoordinatorShardBuilderSupplier<GroupCoordinatorShard, CoordinatorRecord> supplier = () ->
-                new GroupCoordinatorShard.Builder(config, groupConfigManager);
+                new GroupCoordinatorShard.Builder(config, groupConfigManager)
+                    .withAuthorizerPlugin(authorizerPlugin);
 
             CoordinatorEventProcessor processor = new MultiThreadedEventProcessor(
                 logContext,
@@ -214,7 +251,9 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 config,
                 runtime,
                 groupCoordinatorMetrics,
-                groupConfigManager
+                groupConfigManager,
+                persister,
+                timer
             );
         }
     }
@@ -245,6 +284,11 @@ public class GroupCoordinatorService implements GroupCoordinator {
     private final GroupConfigManager groupConfigManager;
 
     /**
+     * The Persister to persist the state of share partition state.
+     */
+    private final Persister persister;
+
+    /**
      * Boolean indicating whether the coordinator is active or not.
      */
     private final AtomicBoolean isActive = new AtomicBoolean(false);
@@ -256,25 +300,38 @@ public class GroupCoordinatorService implements GroupCoordinator {
     private volatile int numPartitions = -1;
 
     /**
+     * The metadata image to extract topic id to names map.
+     * This is initialised when the {@link GroupCoordinator#onNewMetadataImage(MetadataImage, MetadataDelta)} is called
+     */
+    private MetadataImage metadataImage = null;
+
+    private Timer timer;
+
+    /**
      *
      * @param logContext                The log context.
      * @param config                    The group coordinator config.
      * @param runtime                   The runtime.
      * @param groupCoordinatorMetrics   The group coordinator metrics.
      * @param groupConfigManager        The group config manager.
+     * @param persister                 The persister
      */
     GroupCoordinatorService(
         LogContext logContext,
         GroupCoordinatorConfig config,
         CoordinatorRuntime<GroupCoordinatorShard, CoordinatorRecord> runtime,
         GroupCoordinatorMetrics groupCoordinatorMetrics,
-        GroupConfigManager groupConfigManager
+        GroupConfigManager groupConfigManager,
+        Persister persister,
+        Timer timer
     ) {
         this.log = logContext.logger(GroupCoordinatorService.class);
         this.config = config;
         this.runtime = runtime;
         this.groupCoordinatorMetrics = groupCoordinatorMetrics;
         this.groupConfigManager = groupConfigManager;
+        this.persister = persister;
+        this.timer = timer;
     }
 
     /**
@@ -293,14 +350,6 @@ public class GroupCoordinatorService implements GroupCoordinator {
         String groupId
     ) {
         return new TopicPartition(Topic.GROUP_METADATA_TOPIC_NAME, partitionFor(groupId));
-    }
-
-    /**
-     * See {@link GroupCoordinator#isNewGroupCoordinator()}
-     */
-    @Override
-    public boolean isNewGroupCoordinator() {
-        return true;
     }
 
     /**
@@ -345,6 +394,44 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
+     * See
+     * {@link GroupCoordinator#streamsGroupHeartbeat(RequestContext, org.apache.kafka.common.message.StreamsGroupHeartbeatRequestData)}.
+     */
+    @Override
+    public CompletableFuture<StreamsGroupHeartbeatResult> streamsGroupHeartbeat(
+        RequestContext context,
+        StreamsGroupHeartbeatRequestData request
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(
+                new StreamsGroupHeartbeatResult(
+                    new StreamsGroupHeartbeatResponseData().setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code()),
+                    Map.of()
+                )
+            );
+        }
+
+        return runtime.scheduleWriteOperation(
+            "streams-group-heartbeat",
+            topicPartitionFor(request.groupId()),
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.streamsGroupHeartbeat(context, request)
+        ).exceptionally(exception -> handleOperationException(
+            "streams-group-heartbeat",
+            request,
+            exception,
+            (error, message) ->
+                new StreamsGroupHeartbeatResult(
+                    new StreamsGroupHeartbeatResponseData()
+                        .setErrorCode(error.code())
+                        .setErrorMessage(message),
+                    Map.of()
+                ),
+            log
+        ));
+    }
+
+    /**
      * See {@link GroupCoordinator#shareGroupHeartbeat(RequestContext, ShareGroupHeartbeatRequestData)}.
      */
     @Override
@@ -363,7 +450,18 @@ public class GroupCoordinatorService implements GroupCoordinator {
             topicPartitionFor(request.groupId()),
             Duration.ofMillis(config.offsetCommitTimeoutMs()),
             coordinator -> coordinator.shareGroupHeartbeat(context, request)
-        ).exceptionally(exception -> handleOperationException(
+        ).thenCompose(result -> {
+            if (result.getValue().isPresent()) {
+                // Adding to timer makes this call async with respect to the heartbeat.
+                timer.add(new TimerTask(0L) {
+                    @Override
+                    public void run() {
+                        persisterInitialize(result.getValue().get(), result.getKey());
+                    }
+                });
+            }
+            return CompletableFuture.completedFuture(result.getKey());
+        }).exceptionally(exception -> handleOperationException(
             "share-group-heartbeat",
             request,
             exception,
@@ -372,6 +470,125 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 .setErrorMessage(message),
             log
         ));
+    }
+
+    // Visibility for testing
+    CompletableFuture<ShareGroupHeartbeatResponseData> persisterInitialize(
+        InitializeShareGroupStateParameters request,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        return persister.initializeState(request)
+            .handle((response, exp) -> {
+                if (exp == null) {
+                    return handlePersisterInitializeResponse(request.groupTopicPartitionData().groupId(), response, defaultResponse);
+                }
+                GroupTopicPartitionData<PartitionStateData> gtp = request.groupTopicPartitionData();
+                log.error("Unable to initialize share group state {}, {}", gtp.groupId(), gtp.topicsData(), exp);
+                Errors error = Errors.forException(exp);
+                Map<Uuid, Set<Integer>> topicPartitionMap = new HashMap<>();
+                gtp.topicsData().forEach(topicData -> topicPartitionMap.computeIfAbsent(topicData.topicId(), k -> new HashSet<>())
+                    .addAll(topicData.partitions().stream().map(PartitionStateData::partition).collect(Collectors.toSet())));
+                return uninitializeShareGroupState(error, gtp.groupId(), topicPartitionMap);
+            })
+            .thenCompose(resp -> resp);
+    }
+
+    private CompletableFuture<ShareGroupHeartbeatResponseData> handlePersisterInitializeResponse(
+        String groupId,
+        InitializeShareGroupStateResult persisterInitializeResult,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        Errors persisterError = Errors.NONE;
+        for (TopicData<PartitionErrorData> topicData : persisterInitializeResult.topicsData()) {
+            Optional<PartitionErrorData> errData = topicData.partitions().stream().filter(partition -> partition.errorCode() != Errors.NONE.code()).findAny();
+            if (errData.isPresent()) {
+                persisterError = Errors.forCode(errData.get().errorCode());
+                break;
+            }
+        }
+
+        Map<Uuid, Set<Integer>> topicPartitionMap = new HashMap<>();
+        for (TopicData<PartitionErrorData> topicData : persisterInitializeResult.topicsData()) {
+            topicPartitionMap.put(
+                topicData.topicId(),
+                topicData.partitions().stream().map(PartitionErrorData::partition).collect(Collectors.toSet())
+            );
+        }
+
+        if (persisterError.code() == Errors.NONE.code()) {
+            if (topicPartitionMap.isEmpty()) {
+                return CompletableFuture.completedFuture(defaultResponse);
+            }
+            return performShareGroupStateMetadataInitialize(groupId, topicPartitionMap, defaultResponse);
+        }
+        log.error("Received error while calling initialize state for {} on persister {}.", groupId, persisterError.code());
+        return uninitializeShareGroupState(persisterError, groupId, topicPartitionMap);
+    }
+
+    private CompletableFuture<ShareGroupHeartbeatResponseData> uninitializeShareGroupState(
+        Errors error,
+        String groupId,
+        Map<Uuid, Set<Integer>> topicPartitionMap
+    ) {
+        return runtime.scheduleWriteOperation(
+            "uninitialize-share-group-state",
+            topicPartitionFor(groupId),
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.uninitializeShareGroupState(groupId, topicPartitionMap)
+        ).thenApply(__ -> new ShareGroupHeartbeatResponseData()
+            .setErrorCode(error.code())
+            .setErrorMessage(error.message())
+        ).exceptionally(exception -> {
+            log.error("Unable to cleanup topic partitions from share group state metadata", exception);
+            Errors err = Errors.forException(new IllegalStateException("Unable to cleanup topic partitions from share group state metadata", exception));
+            return new ShareGroupHeartbeatResponseData()
+                .setErrorCode(err.code())
+                .setErrorMessage(err.message());
+        });
+    }
+
+    private CompletableFuture<ShareGroupHeartbeatResponseData> performShareGroupStateMetadataInitialize(
+        String groupId,
+        Map<Uuid, Set<Integer>> topicPartitionMap,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        return runtime.scheduleWriteOperation(
+            "initialize-share-group-state",
+            topicPartitionFor(groupId),
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.initializeShareGroupState(groupId, topicPartitionMap)
+        ).handle((__, exp) -> {
+            if (exp == null) {
+                return CompletableFuture.completedFuture(defaultResponse);
+            }
+            log.error("Unable to initialize share group state partition metadata for {}.", groupId, exp);
+            Errors error = Errors.forException(exp);
+            return uninitializeShareGroupState(error, groupId, topicPartitionMap);
+        }).thenCompose(resp -> resp);
+    }
+
+    // Visibility for testing
+    CompletableFuture<Void> reconcileShareGroupStateInitializingState() {
+        List<CompletableFuture<List<InitializeShareGroupStateParameters>>> requestsStages = runtime.scheduleReadAllOperation(
+            "reconcile-share-group-initializing-state",
+            GroupCoordinatorShard::reconcileShareGroupStateInitializingState
+        );
+
+        if (requestsStages.isEmpty()) {
+            log.debug("Nothing to reconcile for share group initializing state.");
+            return CompletableFuture.completedFuture(null);
+        }
+
+        CompletableFuture<Void> allRequestsStage = CompletableFuture.allOf(requestsStages.toArray(new CompletableFuture<?>[0]));
+        final List<CompletableFuture<ShareGroupHeartbeatResponseData>> persisterResponses = new ArrayList<>();
+        allRequestsStage.thenApply(__ -> {
+            requestsStages.forEach(requestsStage -> requestsStage.join().forEach(request -> {
+                log.debug("Reconciling initializing state - {}", request);
+                persisterResponses.add(persisterInitialize(request, new ShareGroupHeartbeatResponseData()));
+            }));
+            return null;
+        });
+        return CompletableFuture.allOf(persisterResponses.toArray(new CompletableFuture<?>[0]));
     }
 
     /**
@@ -552,7 +769,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                              .setMemberId(member.memberId())
                              .setGroupInstanceId(member.groupInstanceId())
                              .setErrorCode(Errors.UNKNOWN_MEMBER_ID.code()))
-                         .collect(Collectors.toList());
+                         .toList();
                     return new LeaveGroupResponseData()
                         .setMembers(memberResponses);
                 } else {
@@ -590,7 +807,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
             exception -> {
                 exception = Errors.maybeUnwrapException(exception);
                 if (exception instanceof NotCoordinatorException) {
-                    return Collections.emptyList();
+                    return List.of();
                 } else {
                     throw new CompletionException(exception);
                 }
@@ -633,7 +850,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
                     .add(groupId);
             } else {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new ConsumerGroupDescribeResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -662,12 +879,65 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
+     * See {@link GroupCoordinator#streamsGroupDescribe(RequestContext, List)}.
+     */
+    @Override
+    public CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>> streamsGroupDescribe(
+        RequestContext context,
+        List<String> groupIds
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(StreamsGroupDescribeRequest.getErrorDescribedGroupList(
+                groupIds,
+                Errors.COORDINATOR_NOT_AVAILABLE
+            ));
+        }
+
+        final List<CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>>> futures =
+            new ArrayList<>(groupIds.size());
+        final Map<TopicPartition, List<String>> groupsByTopicPartition = new HashMap<>();
+        groupIds.forEach(groupId -> {
+            if (isGroupIdNotEmpty(groupId)) {
+                groupsByTopicPartition
+                    .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
+                    .add(groupId);
+            } else {
+                futures.add(CompletableFuture.completedFuture(List.of(
+                    new StreamsGroupDescribeResponseData.DescribedGroup()
+                        .setGroupId(null)
+                        .setErrorCode(Errors.INVALID_GROUP_ID.code())
+                )));
+            }
+        });
+
+        groupsByTopicPartition.forEach((topicPartition, groupList) -> {
+            CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>> future =
+                runtime.scheduleReadOperation(
+                    "streams-group-describe",
+                    topicPartition,
+                    (coordinator, lastCommittedOffset) -> coordinator.streamsGroupDescribe(groupIds, lastCommittedOffset)
+                ).exceptionally(exception -> handleOperationException(
+                    "streams-group-describe",
+                    groupList,
+                    exception,
+                    (error, __) -> StreamsGroupDescribeRequest.getErrorDescribedGroupList(groupList, error),
+                    log
+                ));
+
+            futures.add(future);
+        });
+
+        return FutureUtils.combineFutures(futures, ArrayList::new, List::addAll);
+    }
+    
+    /**
      * See {@link GroupCoordinator#shareGroupDescribe(RequestContext, List)}.
      */
     @Override
     public CompletableFuture<List<DescribedGroup>> shareGroupDescribe(
         RequestContext context,
-        List<String> groupIds) {
+        List<String> groupIds
+    ) {
         if (!isActive.get()) {
             return CompletableFuture.completedFuture(ShareGroupDescribeRequest.getErrorDescribedGroupList(
                 groupIds,
@@ -684,7 +954,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
                     .add(groupId);
             } else {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new ShareGroupDescribeResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -733,7 +1003,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
         groupIds.forEach(groupId -> {
             // For backwards compatibility, we support DescribeGroups for the empty group id.
             if (groupId == null) {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new DescribeGroupsResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -802,20 +1072,28 @@ public class GroupCoordinatorService implements GroupCoordinator {
         });
 
         groupsByTopicPartition.forEach((topicPartition, groupList) -> {
-            CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> future =
-                runtime.scheduleWriteOperation(
-                    "delete-groups",
-                    topicPartition,
-                    Duration.ofMillis(config.offsetCommitTimeoutMs()),
-                    coordinator -> coordinator.deleteGroups(context, groupList)
-                ).exceptionally(exception -> handleOperationException(
-                    "delete-groups",
-                    groupList,
-                    exception,
-                    (error, __) -> DeleteGroupsRequest.getErrorResultCollection(groupList, error),
-                    log
-                ));
+            CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> future = deleteShareGroups(topicPartition, groupList).thenCompose(groupErrMap -> {
+                DeleteGroupsResponseData.DeletableGroupResultCollection deletableGroupResults = new DeleteGroupsResponseData.DeletableGroupResultCollection();
+                List<String> retainedGroupIds = updateResponseAndGetNonErrorGroupList(groupErrMap, groupList, deletableGroupResults);
+                if (retainedGroupIds.isEmpty()) {
+                    return CompletableFuture.completedFuture(deletableGroupResults);
+                }
 
+                return handleDeleteGroups(context, topicPartition, retainedGroupIds)
+                    .whenComplete((resp, __) -> resp.forEach(result -> deletableGroupResults.add(result.duplicate())))
+                    .thenApply(__ -> deletableGroupResults);
+            });
+            // deleteShareGroups has its own exceptionally block, so we don't need one here.
+
+            // This future object has the following stages:
+            // - First it invokes the share group delete flow where the shard sharePartitionDeleteRequests
+            // method is invoked, and it returns request objects for each valid share group passed to it.
+            // All initialized and initializing share partitions are moved to deleting.
+            // - Then the requests are passed to the persister.deleteState method one at a time. The results
+            // are collated as a Map of groupId -> persister errors
+            // - The above map can be used to decide whether to invoke the group coordinator delete groups logic
+            // - Share groups with failed persister delete are NOT CONSIDERED for group coordinator delete.
+            // TLDR: DeleteShareGroups -> filter erroneous persister deletes -> general delete groups logic
             futures.add(future);
         });
 
@@ -823,6 +1101,198 @@ public class GroupCoordinatorService implements GroupCoordinator {
             // We don't use res.addAll(future.join()) because DeletableGroupResultCollection is an ImplicitLinkedHashMultiCollection,
             // which has requirements for adding elements (see ImplicitLinkedHashCollection.java#add).
             (accumulator, newResults) -> newResults.forEach(result -> accumulator.add(result.duplicate())));
+    }
+
+    /**
+     * Processes input shareGroupErrMap by retaining only those which do not contain an error.
+     * Also updates the result collection input arg with share groups containing errors.
+     *
+     * @param shareGroupErrMap      Map keyed on share groupId and value as the error (NONE for no error).
+     * @param groupList             Entire list of groups (all types)
+     * @param deletableGroupResults Collection of responses for delete groups request.
+     * @return A list of all non-error groupIds
+     */
+    private List<String> updateResponseAndGetNonErrorGroupList(
+        Map<String, Errors> shareGroupErrMap,
+        List<String> groupList,
+        DeleteGroupsResponseData.DeletableGroupResultCollection deletableGroupResults
+    ) {
+        List<String> errGroupIds = new ArrayList<>();
+        shareGroupErrMap.forEach((groupId, error) -> {
+            if (error.code() != Errors.NONE.code()) {
+                log.error("Error deleting share group {} due to error {}", groupId, error);
+                errGroupIds.add(groupId);
+                deletableGroupResults.add(
+                    new DeleteGroupsResponseData.DeletableGroupResult()
+                        .setGroupId(groupId)
+                        .setErrorCode(error.code())
+                );
+            }
+        });
+
+        Set<String> groupSet = new HashSet<>(groupList);
+        // Remove all share group ids which have errored out
+        // when deleting with persister.
+        groupSet.removeAll(errGroupIds);
+
+        // Let us invoke the standard procedure of any non-share
+        // groups or successfully deleted share groups remaining.
+        return groupSet.stream().toList();
+    }
+
+    private CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> handleDeleteGroups(
+        RequestContext context,
+        TopicPartition topicPartition,
+        List<String> groupIds
+    ) {
+        return runtime.scheduleWriteOperation(
+            "delete-groups",
+            topicPartition,
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.deleteGroups(context, groupIds)
+        ).exceptionally(exception -> handleOperationException(
+            "delete-groups",
+            groupIds,
+            exception,
+            (error, __) -> DeleteGroupsRequest.getErrorResultCollection(groupIds, error),
+            log
+        ));
+    }
+
+    private CompletableFuture<Map<String, Errors>> deleteShareGroups(
+        TopicPartition topicPartition,
+        List<String> groupList
+    ) {
+        // topicPartition refers to internal topic __consumer_offsets.
+        return runtime.scheduleWriteOperation(
+            "delete-share-groups",
+            topicPartition,
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.sharePartitionDeleteRequests(groupList)
+        ).thenCompose(
+            this::performShareGroupsDeletion
+        ).exceptionally(exception -> handleOperationException(
+            "delete-share-groups",
+            groupList,
+            exception,
+            (error, __) -> {
+                Map<String, Errors> errors = new HashMap<>();
+                groupList.forEach(group -> errors.put(group, error));
+                return errors;
+            },
+            log
+        ));
+    }
+
+    private CompletableFuture<Map<String, Errors>> performShareGroupsDeletion(
+        Map<String, Map.Entry<DeleteShareGroupStateParameters, Errors>> deleteRequests
+    ) {
+        List<CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>>> futures = new ArrayList<>(deleteRequests.size());
+        Map<String, Errors> errorMap = new HashMap<>();
+        deleteRequests.forEach((groupId, valPair) -> {
+            if (valPair.getValue() == Errors.NONE) {
+                futures.add(deleteShareGroup(valPair.getKey()));
+            } else {
+                errorMap.put(groupId, valPair.getValue());
+            }
+        });
+
+        return persisterDeleteToGroupIdErrorMap(futures)
+            .thenApply(respErrMap -> {
+                errorMap.putAll(respErrMap);
+                return errorMap;
+            });
+    }
+
+    private CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>> deleteShareGroup(
+        DeleteShareGroupStateParameters deleteRequest
+    ) {
+        String groupId = deleteRequest.groupTopicPartitionData().groupId();
+        return persister.deleteState(deleteRequest)
+            .thenCompose(result -> CompletableFuture.completedFuture(Map.entry(groupId, result)))
+            .exceptionally(exception -> {
+                // In case the deleteState call fails,
+                // we should construct the appropriate response here
+                // so that the subsequent callbacks don't see runtime exceptions.
+                log.error("Unable to delete share group partition(s) - {} using request {}", groupId, deleteRequest, exception);
+                List<TopicData<PartitionErrorData>> respTopicData = deleteRequest.groupTopicPartitionData().topicsData().stream()
+                    .map(reqTopicData -> new TopicData<>(
+                        reqTopicData.topicId(),
+                        reqTopicData.partitions().stream()
+                            .map(reqPartData -> {
+                                Errors err = Errors.forException(exception);
+                                return PartitionFactory.newPartitionErrorData(reqPartData.partition(), err.code(), err.message());
+                            })
+                            .toList()
+                    ))
+                    .toList();
+
+                return Map.entry(groupId, new DeleteShareGroupStateResult.Builder()
+                    .setTopicsData(respTopicData)
+                    .build()
+                );
+            });
+    }
+
+    private CompletableFuture<Map<String, Errors>> persisterDeleteToGroupIdErrorMap(
+        List<CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>>> futures
+    ) {
+        return CompletableFuture.allOf(futures.toArray(new CompletableFuture<?>[]{})).thenCompose(v -> {
+            Map<String, Errors> groupIds = new HashMap<>();
+            for (CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>> future : futures) {
+                Map.Entry<String, DeleteShareGroupStateResult> entry = future.getNow(null);  // safe as within allOff
+                groupIds.putIfAbsent(entry.getKey(), Errors.NONE);
+                for (TopicData<PartitionErrorData> topicData : entry.getValue().topicsData()) {
+                    Optional<PartitionErrorData> errItem = topicData.partitions().stream()
+                        .filter(errData -> errData.errorCode() != Errors.NONE.code())
+                        .findAny();
+
+                    errItem.ifPresent(val -> {
+                        log.error("Received error while deleting share group {} - {}", entry.getKey(), val);
+                        groupIds.put(entry.getKey(), Errors.forCode(val.errorCode()));
+                    });
+                }
+            }
+
+            return CompletableFuture.completedFuture(groupIds);
+        });
+    }
+
+    private CompletableFuture<DeleteShareGroupOffsetsResponseData> persistDeleteShareGroupOffsets(
+        DeleteShareGroupStateParameters deleteStateRequestParameters,
+        List<DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponseTopic> errorTopicResponseList
+    ) {
+        return persister.deleteState(deleteStateRequestParameters)
+            .thenCompose(result -> {
+                if (result == null || result.topicsData() == null) {
+                    log.error("Result is null for the delete share group state");
+                    Exception exception = new IllegalStateException("Result is null for the delete share group state");
+                    return CompletableFuture.completedFuture(
+                        DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.forException(exception))
+                    );
+                }
+                result.topicsData().forEach(topicData ->
+                    errorTopicResponseList.add(
+                        new DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponseTopic()
+                            .setTopicId(topicData.topicId())
+                            .setTopicName(metadataImage.topics().topicIdToNameView().get(topicData.topicId()))
+                            .setPartitions(topicData.partitions().stream().map(
+                                partitionData -> new DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponsePartition()
+                                    .setPartitionIndex(partitionData.partition())
+                                    .setErrorMessage(partitionData.errorCode() == Errors.NONE.code() ? null : Errors.forCode(partitionData.errorCode()).message())
+                                    .setErrorCode(partitionData.errorCode())
+                            ).toList())
+                    )
+                );
+
+                return CompletableFuture.completedFuture(
+                    new DeleteShareGroupOffsetsResponseData()
+                        .setResponses(errorTopicResponseList)
+                );
+            }).exceptionally(throwable -> {
+                log.error("Failed to delete share group state");
+                return DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.forException(throwable));
+            });
     }
 
     /**
@@ -863,7 +1333,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 topicPartitionFor(request.groupId()),
                 Duration.ofMillis(config.offsetCommitTimeoutMs()),
                 coordinator -> new CoordinatorResult<>(
-                    Collections.emptyList(),
+                    List.of(),
                     coordinator.fetchOffsets(request, Long.MAX_VALUE)
                 )
             ).exceptionally(exception -> handleOffsetFetchException(
@@ -918,7 +1388,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 topicPartitionFor(request.groupId()),
                 Duration.ofMillis(config.offsetCommitTimeoutMs()),
                 coordinator -> new CoordinatorResult<>(
-                    Collections.emptyList(),
+                    List.of(),
                     coordinator.fetchAllOffsets(request, Long.MAX_VALUE)
                 )
             ).exceptionally(exception -> handleOffsetFetchException(
@@ -933,6 +1403,235 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 (coordinator, offset) -> coordinator.fetchAllOffsets(request, offset)
             );
         }
+    }
+
+    /**
+     * See {@link GroupCoordinator#describeShareGroupOffsets(RequestContext, DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup)}.
+     */
+    @Override
+    public CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> describeShareGroupOffsets(
+        RequestContext context,
+        DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup requestData
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        if (metadataImage == null) {
+            return CompletableFuture.completedFuture(
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        Map<Uuid, String> requestTopicIdToNameMapping = new HashMap<>();
+        List<ReadShareGroupStateSummaryRequestData.ReadStateSummaryData> readStateSummaryData = new ArrayList<>(requestData.topics().size());
+        List<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic> describeShareGroupOffsetsResponseTopicList = new ArrayList<>(requestData.topics().size());
+        requestData.topics().forEach(topic -> {
+            Uuid topicId = metadataImage.topics().topicNameToIdView().get(topic.topicName());
+            if (topicId != null) {
+                requestTopicIdToNameMapping.put(topicId, topic.topicName());
+                readStateSummaryData.add(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId)
+                    .setPartitions(
+                        topic.partitions().stream().map(
+                            partitionIndex -> new ReadShareGroupStateSummaryRequestData.PartitionData().setPartition(partitionIndex)
+                        ).toList()
+                    ));
+            } else {
+                // If the topic does not exist, the start offset is returned as -1 (uninitialized offset).
+                // This is consistent with OffsetFetch for situations in which there is no offset information to fetch.
+                // It's treated as absence of data, rather than an error, unlike TOPIC_AUTHORIZATION_ERROR for example.
+                describeShareGroupOffsetsResponseTopicList.add(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
+                    .setTopicName(topic.topicName())
+                    .setTopicId(Uuid.ZERO_UUID)
+                    .setPartitions(topic.partitions().stream().map(
+                        partition -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
+                            .setPartitionIndex(partition)
+                            .setStartOffset(PartitionFactory.UNINITIALIZED_START_OFFSET)
+                    ).toList()));
+            }
+        });
+
+        // If the request for the persister is empty, just complete the operation right away.
+        if (readStateSummaryData.isEmpty()) {
+            return CompletableFuture.completedFuture(
+                new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                    .setGroupId(requestData.groupId())
+                    .setTopics(describeShareGroupOffsetsResponseTopicList));
+        }
+
+        ReadShareGroupStateSummaryRequestData readSummaryRequestData = new ReadShareGroupStateSummaryRequestData()
+            .setGroupId(requestData.groupId())
+            .setTopics(readStateSummaryData);
+
+        return readShareGroupStateSummary(readSummaryRequestData, requestTopicIdToNameMapping, describeShareGroupOffsetsResponseTopicList);
+    }
+
+    /**
+     * See {@link GroupCoordinator#describeShareGroupAllOffsets(RequestContext, DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup)}.
+     */
+    @Override
+    public CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> describeShareGroupAllOffsets(
+        RequestContext context,
+        DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup requestData
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        if (metadataImage == null) {
+            return CompletableFuture.completedFuture(
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        return runtime.scheduleReadOperation(
+            "share-group-initialized-partitions",
+            topicPartitionFor(requestData.groupId()),
+            (coordinator, offset) -> coordinator.initializedShareGroupPartitions(requestData.groupId())
+        ).thenCompose(topicPartitionMap -> {
+            Map<Uuid, String> requestTopicIdToNameMapping = new HashMap<>();
+            List<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic> describeShareGroupOffsetsResponseTopicList = new ArrayList<>(topicPartitionMap.size());
+            ReadShareGroupStateSummaryRequestData readSummaryRequestData = new ReadShareGroupStateSummaryRequestData()
+                .setGroupId(requestData.groupId());
+            topicPartitionMap.forEach((topicId, partitionSet) -> {
+                String topicName = metadataImage.topics().topicIdToNameView().get(topicId);
+                if (topicName != null) {
+                    requestTopicIdToNameMapping.put(topicId, topicName);
+                    readSummaryRequestData.topics().add(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                        .setTopicId(topicId)
+                        .setPartitions(
+                            partitionSet.stream().map(
+                                partitionIndex -> new ReadShareGroupStateSummaryRequestData.PartitionData().setPartition(partitionIndex)
+                            ).toList()
+                        ));
+                }
+            });
+            return readShareGroupStateSummary(readSummaryRequestData, requestTopicIdToNameMapping, describeShareGroupOffsetsResponseTopicList);
+        });
+    }
+
+    private CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> readShareGroupStateSummary(
+        ReadShareGroupStateSummaryRequestData readSummaryRequestData,
+        Map<Uuid, String> requestTopicIdToNameMapping,
+        List<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic> describeShareGroupOffsetsResponseTopicList
+    ) {
+        // If the request for the persister is empty, just complete the operation right away.
+        if (readSummaryRequestData.topics().isEmpty()) {
+            return CompletableFuture.completedFuture(
+                new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                    .setGroupId(readSummaryRequestData.groupId())
+                    .setTopics(describeShareGroupOffsetsResponseTopicList));
+        }
+
+        CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> future = new CompletableFuture<>();
+        persister.readSummary(ReadShareGroupStateSummaryParameters.from(readSummaryRequestData))
+            .whenComplete((result, error) -> {
+                if (error != null) {
+                    log.error("Failed to read summary of the share partition");
+                    future.completeExceptionally(error);
+                    return;
+                }
+                if (result == null || result.topicsData() == null) {
+                    log.error("Result is null for the read state summary");
+                    future.completeExceptionally(new IllegalStateException("Result is null for the read state summary"));
+                    return;
+                }
+
+                // Return -1 (uninitialized offset) for the situation where the persister returned an error.
+                // This is consistent with OffsetFetch for situations in which there is no offset information to fetch.
+                // It's treated as absence of data, rather than an error.
+                result.topicsData().forEach(topicData ->
+                    describeShareGroupOffsetsResponseTopicList.add(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
+                        .setTopicId(topicData.topicId())
+                        .setTopicName(requestTopicIdToNameMapping.get(topicData.topicId()))
+                        .setPartitions(topicData.partitions().stream().map(
+                            partitionData -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
+                                .setPartitionIndex(partitionData.partition())
+                                .setStartOffset(partitionData.errorCode() == Errors.NONE.code() ? partitionData.startOffset() : PartitionFactory.UNINITIALIZED_START_OFFSET)
+                        ).toList())
+                    ));
+
+                future.complete(
+                    new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                        .setGroupId(readSummaryRequestData.groupId())
+                        .setTopics(describeShareGroupOffsetsResponseTopicList));
+            });
+        return future;
+    }
+
+    /**
+     * See {@link GroupCoordinator#deleteShareGroupOffsets(RequestContext, DeleteShareGroupOffsetsRequestData)}.
+     */
+    @Override
+    public CompletableFuture<DeleteShareGroupOffsetsResponseData> deleteShareGroupOffsets(
+        RequestContext context,
+        DeleteShareGroupOffsetsRequestData requestData
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(
+                DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        if (metadataImage == null) {
+            return CompletableFuture.completedFuture(
+                DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.COORDINATOR_NOT_AVAILABLE));
+        }
+
+        String groupId = requestData.groupId();
+
+        if (!isGroupIdNotEmpty(groupId)) {
+            return CompletableFuture.completedFuture(
+                DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.INVALID_GROUP_ID));
+        }
+
+        if (requestData.topics() == null || requestData.topics().isEmpty()) {
+            return CompletableFuture.completedFuture(
+                new DeleteShareGroupOffsetsResponseData()
+            );
+        }
+
+        return runtime.scheduleReadOperation(
+            "share-group-delete-offsets-request",
+            topicPartitionFor(groupId),
+            (coordinator, lastCommittedOffset) -> coordinator.shareGroupDeleteOffsetsRequest(groupId, requestData)
+        )
+            .thenCompose(resultHolder -> {
+                if (resultHolder == null) {
+                    log.error("Failed to retrieve deleteState request parameters from group coordinator for the group {}", groupId);
+                    return CompletableFuture.completedFuture(
+                        DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.UNKNOWN_SERVER_ERROR)
+                    );
+                }
+
+                if (resultHolder.topLevelErrorCode() != Errors.NONE.code()) {
+                    return CompletableFuture.completedFuture(
+                        DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(
+                            resultHolder.topLevelErrorCode(),
+                            resultHolder.topLevelErrorMessage()
+                        )
+                    );
+                }
+
+                List<DeleteShareGroupOffsetsResponseData.DeleteShareGroupOffsetsResponseTopic> errorTopicResponseList =
+                    resultHolder.errorTopicResponseList() == null ? new ArrayList<>() : new ArrayList<>(resultHolder.errorTopicResponseList());
+
+                if (resultHolder.deleteStateRequestParameters() == null) {
+                    return CompletableFuture.completedFuture(
+                        new DeleteShareGroupOffsetsResponseData()
+                            .setResponses(errorTopicResponseList)
+                    );
+                }
+
+                return persistDeleteShareGroupOffsets(
+                    resultHolder.deleteStateRequestParameters(),
+                    errorTopicResponseList
+                );
+            })
+            .exceptionally(throwable -> {
+                log.error("Failed to retrieve deleteState request parameters from group coordinator for the group {}", groupId, throwable);
+                return DeleteShareGroupOffsetsRequest.getErrorDeleteResponseData(Errors.forException(throwable));
+            });
     }
 
     /**
@@ -1083,19 +1782,6 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
-     * See {@link GroupCoordinator#onTransactionCompleted(long, Iterable, TransactionResult)}.
-     */
-    @Override
-    public CompletableFuture<Void> onTransactionCompleted(
-        long producerId,
-        Iterable<TopicPartition> partitions,
-        TransactionResult transactionResult
-    ) {
-        throwIfNotActive();
-        throw new IllegalStateException("onTransactionCompleted is not supported.");
-    }
-
-    /**
      * See {@link GroupCoordinator#onPartitionsDeleted(List, BufferSupplier)}.
      */
     @Override
@@ -1118,7 +1804,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     );
                     return null;
                 }
-            ).toArray(new CompletableFuture[0])
+            ).toArray(new CompletableFuture<?>[0])
         ).get();
     }
 
@@ -1135,6 +1821,13 @@ public class GroupCoordinatorService implements GroupCoordinator {
             new TopicPartition(Topic.GROUP_METADATA_TOPIC_NAME, groupMetadataPartitionIndex),
             groupMetadataPartitionLeaderEpoch
         );
+
+        // Wait for reconciliation to complete.
+        try {
+            reconcileShareGroupStateInitializingState().join();
+        } catch (Exception e) {
+            log.error("Share group reconciliation failed", e);
+        }
     }
 
     /**
@@ -1161,6 +1854,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
         MetadataDelta delta
     ) {
         throwIfNotActive();
+        metadataImage = newImage;
         runtime.onNewMetadataImage(newImage, delta);
     }
 
@@ -1275,6 +1969,12 @@ public class GroupCoordinatorService implements GroupCoordinator {
                         .setErrorCode(error.code()),
                     log
                 );
+        }
+    }
+
+    private static void requireNonNull(Object obj, RuntimeException throwable) {
+        if (obj == null) {
+            throw throwable;
         }
     }
 }
