@@ -27,13 +27,14 @@ import org.apache.kafka.coordinator.group.streams.TopicMetadata;
 import org.slf4j.Logger;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Set;
+import java.util.SortedMap;
+import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -74,12 +75,16 @@ public class InternalTopicManager {
             Map<String, Integer> decidedPartitionCountsForInternalTopics =
                 decidePartitionCounts(logContext, topology, topicMetadata, copartitionGroupsBySubtopology, log);
 
-            final Map<String, ConfiguredSubtopology> configuredSubtopologies =
+            final SortedMap<String, ConfiguredSubtopology> configuredSubtopologies =
                 subtopologies.stream()
                     .collect(Collectors.toMap(
                         StreamsGroupTopologyValue.Subtopology::subtopologyId,
-                        x -> fromPersistedSubtopology(x, decidedPartitionCountsForInternalTopics))
-                    );
+                        x -> fromPersistedSubtopology(x, decidedPartitionCountsForInternalTopics),
+                        (v1, v2) -> {
+                            throw new RuntimeException(String.format("Duplicate key for values %s and %s", v1, v2));
+                        },
+                        TreeMap::new
+                    ));
 
             Map<String, CreatableTopic> internalTopicsToCreate = missingInternalTopics(configuredSubtopologies, topicMetadata);
             if (!internalTopicsToCreate.isEmpty()) {
@@ -151,7 +156,6 @@ public class InternalTopicManager {
         enforceCopartitioning(
             topology,
             copartitionGroupsBySubtopology,
-            log,
             decidedPartitionCountsForInternalTopics,
             copartitionedTopicsEnforcer
         );
@@ -163,7 +167,6 @@ public class InternalTopicManager {
 
     private static void enforceCopartitioning(final StreamsTopology topology,
                                               final Map<String, Collection<Set<String>>> copartitionGroupsBySubtopology,
-                                              final Logger log,
                                               final Map<String, Integer> decidedPartitionCountsForInternalTopics,
                                               final CopartitionedTopicsEnforcer copartitionedTopicsEnforcer) {
         final Set<String> fixedRepartitionTopics =
@@ -175,17 +178,13 @@ public class InternalTopicManager {
                 x.repartitionSourceTopics().stream().filter(y -> y.partitions() == 0)
             ).map(StreamsGroupTopologyValue.TopicInfo::name).collect(Collectors.toSet());
 
-        if (fixedRepartitionTopics.isEmpty() && flexibleRepartitionTopics.isEmpty()) {
-            log.info("Skipping the repartition topic validation since there are no repartition topics.");
-        } else {
-            // ensure the co-partitioning topics within the group have the same number of partitions,
-            // and enforce the number of partitions for those repartition topics to be the same if they
-            // are co-partitioned as well.
-            for (Collection<Set<String>> copartitionGroups : copartitionGroupsBySubtopology.values()) {
-                for (Set<String> copartitionGroup : copartitionGroups) {
-                    decidedPartitionCountsForInternalTopics.putAll(
-                        copartitionedTopicsEnforcer.enforce(copartitionGroup, fixedRepartitionTopics, flexibleRepartitionTopics));
-                }
+        // ensure the co-partitioning topics within the group have the same number of partitions,
+        // and enforce the number of partitions for those repartition topics to be the same if they
+        // are co-partitioned as well.
+        for (Collection<Set<String>> copartitionGroups : copartitionGroupsBySubtopology.values()) {
+            for (Set<String> copartitionGroup : copartitionGroups) {
+                decidedPartitionCountsForInternalTopics.putAll(
+                    copartitionedTopicsEnforcer.enforce(copartitionGroup, fixedRepartitionTopics, flexibleRepartitionTopics));
             }
         }
     }
@@ -284,7 +283,7 @@ public class InternalTopicManager {
             topicInfo.topicConfigs() != null ? topicInfo.topicConfigs().stream()
                 .collect(Collectors.toMap(StreamsGroupTopologyValue.TopicConfig::key,
                     StreamsGroupTopologyValue.TopicConfig::value))
-                : Collections.emptyMap()
+                : Map.of()
         );
     }
 
@@ -298,6 +297,6 @@ public class InternalTopicManager {
                 copartitionGroup.repartitionSourceTopics().stream()
                     .map(i -> subtopology.repartitionSourceTopics().get(i).name())
             ).collect(Collectors.toSet())
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
