@@ -16,12 +16,11 @@
  */
 package org.apache.kafka.server.common;
 
-import java.util.Collections;
 import java.util.Map;
 
 public enum KRaftVersion implements FeatureVersion {
     // Version 0 is the initial version of KRaft.
-    KRAFT_VERSION_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION),
+    KRAFT_VERSION_0(0, MetadataVersion.MINIMUM_VERSION),
 
     // Version 1 enables KIP-853.
     KRAFT_VERSION_1(1, MetadataVersion.IBP_3_9_IV0);
@@ -74,9 +73,9 @@ public enum KRaftVersion implements FeatureVersion {
     @Override
     public Map<String, Short> dependencies() {
         if (this.featureLevel == 0) {
-            return Collections.emptyMap();
+            return Map.of();
         } else {
-            return Collections.singletonMap(
+            return Map.of(
                 MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_9_IV0.featureLevel());
         }
     }
